--- a/Parking/Parking/Parking/Views/PersonOperations/EmployeeWindow.xaml
+++ b/Parking/Parking/Parking/Views/PersonOperations/EmployeeWindow.xaml
@@ -4,6 +4,7 @@
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"        
         xmlns:helpes ="clr-namespace:Parking.Helpes"
+        xmlns:wtk="clr-namespace:Xceed.Wpf.Toolkit;assembly=Xceed.Wpf.Toolkit"
         xmlns:local="clr-namespace:Parking.Views.PersonOperations" 
         xmlns:personoperations="clr-namespace:Parking.ViewModel.PersonOperations"
         d:DataContext="{d:DesignInstance Type=personoperations:EmployeeWindowContext}"
@@ -16,13 +17,17 @@
             <!--https://ru.stackoverflow.com/questions/974297/%D0%9F%D0%B5%D1%80%D0%B5%D0%BD%D0%BE%D1%81-%D1%81%D1%82%D1%80%D0%BE%D0%BA-%D0%B2-%D0%B7%D0%B0%D0%B3%D0%BE%D0%BB%D0%BE%D0%B2%D0%BA%D0%B5-datagrid-wpf-->
 
             <DataTemplate x:Key="HeaderTemplate">
-                <TextBlock Text="{Binding}" TextWrapping="Wrap"  TextAlignment="Center"/>               
+                <TextBlock Text="{Binding}" TextWrapping="Wrap"  TextAlignment="Center"/>
+
             </DataTemplate>
-            <Style TargetType="DataGridColumnHeader">               
-                <Setter Property="HorizontalContentAlignment" Value="Center"/>               
-                <Setter Property="Padding" Value="2"/>               
-                <Setter Property="ContentTemplate" Value="{StaticResource HeaderTemplate}"/>               
+            <Style TargetType="DataGridColumnHeader">
+                <Setter Property="HorizontalContentAlignment" Value="Center"/>
+                <Setter Property="Padding" Value="2"/>
+                <Setter Property="ContentTemplate" Value="{StaticResource HeaderTemplate}"/>
             </Style>
+
+
+
         </ResourceDictionary>
         
     </Window.Resources>
@@ -38,18 +43,19 @@
                     <RowDefinition Height="0.075*"/>
                     <RowDefinition/>
                 </Grid.RowDefinitions>
-                <DataGrid x:Name="GridClients" Grid.Row="1"
+                <DataGrid x:Name="GridClients" Grid.Row="1" 
                       ItemsSource="{Binding EmployeeRecords}" 
                       SelectedItem="{Binding  SelectetRecord}"                                          
                       AutoGenerateColumns="False" SelectionMode="Single"
                       IsReadOnly="True" Grid.RowSpan="2" Grid.ColumnSpan="2">
+                   
                     <DataGrid.InputBindings>
                         <MouseBinding MouseAction="LeftDoubleClick"
                                          CommandParameter="{Binding ElementName=GridAuthors, Path=SelectedItem}"
                                          Command="{Binding CallCkientDetailsCommand}"/>
                     </DataGrid.InputBindings>
                     <DataGrid.Columns>
-                        <DataGridTextColumn Width="0.75*" Binding="{Binding PYB, UpdateSourceTrigger=PropertyChanged}"  Header="ПІБ співробітника"  />
+                        <DataGridTextColumn Width="0.45*" Binding="{Binding PYB, UpdateSourceTrigger=PropertyChanged}"  Header="ПІБ співробітника"  />
                         <DataGridTextColumn Width="0.45*" Binding="{Binding Position, UpdateSourceTrigger=PropertyChanged}" Header="Посада"/>
                         <DataGridTextColumn Width="0.25*" Binding="{Binding Salary, UpdateSourceTrigger=PropertyChanged}" Header="Зарплата"/>
                         <DataGridTextColumn Width="0.25*" Binding="{Binding Status, UpdateSourceTrigger=PropertyChanged}" Header="Статус в системі бази данних"/>
@@ -169,28 +175,26 @@
                     <RowDefinition/>
                 </Grid.RowDefinitions>
 
-                <TextBlock  Text="Прізвище: " FontSize="14" FontWeight="Bold"/>
-                <TextBox Grid.Column="1" Text="{Binding CurrentRecord.SecondName, UpdateSourceTrigger=PropertyChanged}" Width="150" FontSize="14" MaxLength="26" HorizontalAlignment="Left" Margin="3"/>
-                <TextBlock  Text="Ім'я: " FontSize="14" FontWeight="Bold" Grid.Row="1"/>
-                <TextBox  Text="{Binding CurrentRecord.FirstName, UpdateSourceTrigger=PropertyChanged}" Width="150" FontSize="14" MaxLength="26" HorizontalAlignment="Left" Grid.Column="1" Grid.Row="1"  Margin="3"/>
-                <TextBlock  Text="По батькові: " FontSize="14" FontWeight="Bold" Grid.Row="2"/>
-                <TextBox  Text="{Binding CurrentRecord.Patronimic, UpdateSourceTrigger=PropertyChanged}" Width="150" FontSize="14" MaxLength="26" HorizontalAlignment="Left" Grid.Column="1" Grid.Row="2" Margin="3"/>
+                <TextBlock  Text="Прізвище: " FontSize="14" FontWeight="Bold" VerticalAlignment="Center"/>
+                <TextBox Grid.Column="1" Text="{Binding CurrentRecord.SecondName, UpdateSourceTrigger=PropertyChanged}" MinWidth="185" FontSize="14" MaxLength="26" HorizontalAlignment="Left" Margin="3" VerticalContentAlignment="Center"/>
+                <TextBlock  Text="Ім'я: " FontSize="14" FontWeight="Bold" Grid.Row="1" VerticalAlignment="Center"/>
+                <TextBox  Text="{Binding CurrentRecord.FirstName, UpdateSourceTrigger=PropertyChanged}" MinWidth="185" FontSize="14" MaxLength="26" HorizontalAlignment="Left" Grid.Column="1" Grid.Row="1"  Margin="3" VerticalContentAlignment="Center"/>
+                <TextBlock  Text="По батькові: " FontSize="14" FontWeight="Bold" Grid.Row="2" VerticalAlignment="Center"/>
+                <TextBox  Text="{Binding CurrentRecord.Patronimic, UpdateSourceTrigger=PropertyChanged}" MinWidth="185" FontSize="14" MaxLength="26" HorizontalAlignment="Left" Grid.Column="1" Grid.Row="2" Margin="3" VerticalContentAlignment="Center"/>
                 <StackPanel Orientation="Horizontal" Grid.Row="3" Grid.ColumnSpan="2">
-                    <TextBlock  Text="Стать: " FontSize="14" FontWeight="Bold" />
+                    <TextBlock  Text="Стать: " FontSize="14" FontWeight="Bold" VerticalAlignment="Center" />
                     <RadioButton GroupName="A" Content="Жіноча " VerticalAlignment="Center" IsChecked="{Binding CurrentRecord.Female, UpdateSourceTrigger=PropertyChanged, Mode=TwoWay}"/>
                     <RadioButton GroupName="A" Content=" Чоловіча" VerticalAlignment="Center" IsChecked="{Binding CurrentRecord.Male, UpdateSourceTrigger=PropertyChanged, Mode=TwoWay}"/>
                 </StackPanel>
-                <TextBlock  Text="№ телефона: " FontSize="14" FontWeight="Bold" Grid.Row="4"/>
-                <TextBox  Text="{Binding CurrentRecord.PhoneNumber, UpdateSourceTrigger=PropertyChanged}" Width="150" FontSize="14" MaxLength="26" HorizontalAlignment="Left" Grid.Column="1" Grid.Row="4" Margin="3"/>
-                <TextBlock  Text="Адреса: " FontSize="14" FontWeight="Bold" Grid.Row="5"/>
-                <TextBox  Text="{Binding CurrentRecord.Adress, UpdateSourceTrigger=PropertyChanged}" MinWidth="185" FontSize="14" TextWrapping="Wrap" HorizontalAlignment="Left" Grid.Column="1" Grid.Row="5" Grid.RowSpan="2" Margin="3"/>
-                <TextBlock  Text="Посада: " FontSize="14" FontWeight="Bold" Grid.Row="7"/>
-                <TextBox  Text="{Binding CurrentRecord.Position, UpdateSourceTrigger=PropertyChanged}" MinWidth="190" FontSize="14"  HorizontalAlignment="Left" Grid.Column="1" Grid.Row="7" Margin="3"/>
-                <TextBlock  Text=" Заробітна плата: " TextWrapping="Wrap" FontSize="14" FontWeight="Bold" Grid.Row="8"/>
-                <TextBox  Text="{Binding CurrentRecord.Salary, UpdateSourceTrigger=PropertyChanged}" Width="150" FontSize="14" MaxLength="26" HorizontalAlignment="Left" Grid.Column="1" Grid.Row="8" Margin="3"/>
-                <StackPanel Orientation="Horizontal" Grid.Row="7" Grid.Column="1">
-                    
-                </StackPanel>
+                <TextBlock  Text="№ телефона: " FontSize="14" FontWeight="Bold" Grid.Row="4" VerticalAlignment="Center"/>
+                <TextBox  Text="{Binding CurrentRecord.PhoneNumber, UpdateSourceTrigger=PropertyChanged}" MinWidth="185" FontSize="14" MaxLength="26" HorizontalAlignment="Left" Grid.Column="1" Grid.Row="4" Margin="3" VerticalContentAlignment="Center"/>
+                <TextBlock  Text="Адреса: " FontSize="14" FontWeight="Bold" Grid.Row="5" VerticalAlignment="Center"/>
+                <TextBox  Text="{Binding CurrentRecord.Adress, UpdateSourceTrigger=PropertyChanged}" MinWidth="185" FontSize="14" TextWrapping="Wrap" HorizontalAlignment="Left" Grid.Column="1" Grid.Row="5" Grid.RowSpan="2" Margin="3" VerticalContentAlignment="Center"/>
+                <TextBlock  Text="Посада: " FontSize="14" FontWeight="Bold" Grid.Row="7" VerticalAlignment="Center"/>
+                <TextBox  Text="{Binding CurrentRecord.Position, UpdateSourceTrigger=PropertyChanged}" MinWidth="185" FontSize="14"  HorizontalAlignment="Left" Grid.Column="1" Grid.Row="7" Margin="3" VerticalContentAlignment="Center"/>
+                <TextBlock  Text="Заробітна плата: " TextWrapping="Wrap" FontSize="14" FontWeight="Bold" Grid.Row="8" VerticalAlignment="Center"/>
+                <TextBox  Text="{Binding CurrentRecord.Salary, UpdateSourceTrigger=PropertyChanged}" MinWidth="185" FontSize="14" MaxLength="26" HorizontalAlignment="Left" Grid.Column="1" Grid.Row="8" Margin="3" VerticalAlignment="Center"/>
+                
                 <StackPanel  Grid.Row="0" Grid.Column="2">
                     <TextBlock Text="Статус в системі бази даних" FontWeight="Bold" HorizontalAlignment="Center" FontSize="14"/>
                     <ComboBox x:Name="StatusList"  MinWidth="120"  
@@ -207,7 +211,7 @@
                         <RowDefinition/>
                     </Grid.RowDefinitions>
                     <TextBlock Text="Відгук про працівника" FontWeight="Bold" HorizontalAlignment="Center"/>
-                    <TextBox  Text="{Binding CurrentRecord.Description, UpdateSourceTrigger=PropertyChanged}" MinWidth="210" FontSize="14"  HorizontalAlignment="Left" Grid.Row="1" Margin="3"/>
+                    <TextBox  Text="{Binding CurrentRecord.Description, UpdateSourceTrigger=PropertyChanged}" MinWidth="210" FontSize="14"  HorizontalAlignment="Left" Grid.Row="1" Margin="3" VerticalContentAlignment="Center"/>
                 </Grid>
                 <StackPanel Grid.Column="2" Grid.Row="6" Margin="3">
                     <TextBlock Text="Дата народження" FontWeight="Bold" HorizontalAlignment="Center"/>
@@ -225,9 +229,9 @@
                 </StackPanel>
                 <StackPanel Grid.Column="2" Grid.Row="8" Margin="3">
                     <TextBlock Text="Дата звільнення" FontWeight="Bold" HorizontalAlignment="Center"/>
-                    <StackPanel Orientation="Horizontal">
+                    <StackPanel Orientation="Horizontal" HorizontalAlignment="Center">
                         <CheckBox x:Name="EndWorkEnable" TabIndex="11"  VerticalAlignment="Center"/>
-                        <DatePicker  IsDropDownOpen="False" SelectedDateFormat="Short" 
+                        <DatePicker  IsDropDownOpen="False" SelectedDateFormat="Short"  
                              IsEnabled="{Binding ElementName=EndWorkEnable,  Path=IsChecked}"
                          VerticalAlignment="Center"
                         SelectedDate="{Binding CurrentRecord.FireDate, UpdateSourceTrigger=PropertyChanged,Mode=TwoWay}"  Width="111" Height="21" Margin="10,0,29.4,0"
